Bug 1714810 - Add a hidden pref to prevent to collapse selection at trying to start autoscroll. r=edgar, a=RyanVM

Collapsing selection with middle click is compatible behavior with Chrome.
However, some Firefox users don't like this behavior, and we have not done it
before.  Therefore, this patch adds a hidden pref to prevent the new Chrome
compatible behavior.

Keeping compatible behavior is important and middle click is mainly used for
autoscroll.  Therefore, if auto scroll is disabled, we should ignore the new
pref for better compatibility.

Unfortunately, we collapse selection before `AutoScrollChild` handles
`mousedown` event with the listener in the system group (
 `nsIFrame::HandleEvent()` is called before that).  Therefore, we cannot prevent
 the selection change from `AutoScrollChild` only when it starts scroll.
 For solving this issue, we need a lot of big changes.  Therefore, for now,
 this patch just checks whether the pref is enabled or not.

 And also the new pref is ignored when middle click paste is enabled because
 it may be followed by "paste" event even when user clicks non-editable nodes.
 Then, if web apps handle "paste" event, the new selection range may be
 important.  Therefore, we should ignore the new pref in this case.

Differential Revision: https://phabricator.services.mozilla.com/D122931